scss/app.scss
@import "settings";
@import "foundation";
@import "normalize";
@import "font-awesome/font-awesome";
@import "helpers";


/* ==========================================================================
   Author's custom styles
   ========================================================================== */

html,
body {
  height: 100%;
}

select,
textarea {
  margin-bottom: rem-calc(16);
}

select {
  padding: 0 rem-calc(8);
}

::-moz-selection {
  background: #b3d4fc;
  text-shadow: none;
}

::selection {
  background: #b3d4fc;
  text-shadow: none;
}

hr {
  display: block;
  height: 1px;
  border: 0;
  border-top: 1px solid #ddd;
  margin: rem-calc(16 0);
  padding: 0;
}

.browsehappy-alert {
  margin: 0;
  text-align: center;
}

.page-wrap {
  min-height: 100%;
  margin-bottom: -$footer-height;
  &:after {
    content: "";
    display: block;
    height: $footer-height;
  }
}

.head_panel {
  margin-top: rem-calc(16);
}

.center {
  display: block;
  margin: 0 auto;
}

.events.main-content .event-header {
  &:before {
    display: block;
    content: " ";
    margin-top: -$topbar-height;
    height: $topbar-height;
    visibility: hidden;
  }
}

.main-footer {
  overflow: hidden;
  height: $footer-height;
  line-height: $footer-height;
  position: relative;
  background: $topbar-bg-color;
  font-weight: bold;
  color: white;
  a {
    transition: color 200ms;
  }
  .social-media,
  .address,
  .copyright {
    text-align: center;
  }
  .social-media {
    line-height: $footer-height*0.4;
    font-size: ($footer-height*0.4)*0.45;
    & a {
      margin: rem-calc(0 8);
      // Petfinder Logo
      &:hover svg .a {
        fill: #0078a0;
        transition: fill 200ms;
      }
    }
  }
  .address {
    line-height: $footer-height*0.4;
  }
  .copyright {
    line-height: $footer-height*0.2;
  }
}

.paypal-donate {
  text-align: center;
  margin: 0;
}

.loading_spinner {
  position: relative;
  margin: 0 auto;
  width: $loader-width;
  height: $loader-width;
  zoom: 1.7;
}

.pad-left {
  padding-left: rem-calc(40);
}

.no-margin-bottom {
  margin-bottom: 0;
}

.margin-bottom {
  margin-bottom: rem-calc(20);
}

.margin-top {
  margin-top: rem-calc(20);
}

.text-center {
  text-align: center;
}

.alert-box > p {
  margin-bottom: 0;
}

.alert-box.alert a {
  color: indigo;
}

label.required:after {
  content: " *";
  color: $alert-color;
}

input[type=radio] {
  &:hover {
    cursor: pointer;
  }
  + label {
  display: inline;
  }
}

div.error > input[type=radio] {
  margin-bottom: rem-calc(16);
}

.pet-box {
  padding: 4px;
  margin: 3px 3px 20px;
}

.clearing-assembled {
  text-align: center;
  @media #{$medium-up} {
    text-align: start;
  }
}

ul.clearing-thumbs.clearing-feature {
  display: inline-block;
  float: none;
  margin-bottom: rem-calc(16);
  @media #{$medium-up} {
    display: block;
    float: left;
    margin-bottom: 0;
  }
}

.pet-name {
  text-align: center;
  text-transform: uppercase;
  > span {
    font-size: rem-calc(48);
    box-shadow: inset 0px 0px 3px $topbar-bg-color;
    text-shadow: 1px 1px 1px $topbar-bg-color;
    margin-bottom: 0;
  }
}

.options {
  list-style: none;
  margin: rem-calc(0 0 10 0);
  font-size: rem-calc(12);
  text-align: center;
  li {
    &:after {
      @media #{$medium-up} {
        content: " | ";
      }
    }
    &:last-of-type {
      margin-right: 0;
      &:after {
        content: "";
      }
    }
    @media #{$medium-up} {
      display: inline;
    }
  }
  @media #{$large-up} {
    font-size: rem-calc(16);
  }
}

.upcoming-events-list > li,
.recent-donations > li {
  list-style: none;
}

a.th {
  max-width: rem-calc(200);
}

li[data-orbit-slide] {
  cursor: pointer;
}

/* Fix orbit flash of unstyled content */
ul[data-orbit]  {
  margin: 0;
  padding-left: 0;
  list-style-type: none;
  li,
  .orbit-caption {
    display: none; /* Initially, hide all slides... */
  }
  li:first-child {
    display: block; /* ...Except for the first one */
  }
}

/* Show slides once .orbit-container is loaded */
.orbit-container ul[data-orbit] li,
.orbit-container ul[data-orbit] .orbit-caption {
  display: block;
}

.main-content-slider {
  background: $main-content-slider-bg;
  li div {
    color: white;
    padding: rem-calc(30 40);
    h1,
    h2,
    h3,
    h4,
    h5,
    h6 {
      color: white;
    }
    small {
      color: white;
    }
    a {
      color: darken($primary-color, 10%);
    }
  }
}

div.family-members > div > label[for="family_member_1_name"] > strong {
  font-size: 1.25rem;
  text-decoration: underline;
}

div.row.family-members {
  margin-bottom: 1rem;
  > div {
    margin-bottom: 1rem;
    &:first-of-type,
    &:last-of-type {
      margin-bottom: 0;
    }
    fieldset {
      padding: 1rem .625rem 0;
    }
  }
}

div.row.family-members > .num_of_people > div {
  margin-bottom: 1rem;
  &:first-of-type {
    margin-top: 1rem;
  }
  &:last-of-type {
    margin-bottom: 0;
  }
}

.num-of-cats-and-dogs-block > .num-of-cats-and-dogs-block-fieldset,
.num-of-vets-block > .num-of-vets-block-fieldset {
  margin-bottom: 1rem;
  fieldset {
    padding: 1rem .625rem 0;
  }
}

.circular {
 animation: rotate 2s linear infinite;
 height: $loader-width;
 position: relative;
 width: $loader-width;
}

.path {
  stroke-dasharray: 1,200;
  stroke-dashoffset: 0;
  animation:
   dash 1.5s ease-in-out infinite,
   color 6s ease-in-out infinite
  ;
  stroke-linecap: round;
}

.mb1 {
  margin-bottom: 1rem !important;
}

// Font Awesome External Link
.fa-external-link {
  font-size: .625rem;
  vertical-align: text-top;
}

@keyframes rotate {
 100%{
  transform: rotate(360deg);
 }
}

@keyframes dash {
 0%{
  stroke-dasharray: 1,200;
  stroke-dashoffset: 0;
 }
 50%{
  stroke-dasharray: 89,200;
  stroke-dashoffset: -35;
 }
 100%{
  stroke-dasharray: 89,200;
  stroke-dashoffset: -124;
 }
}

@keyframes color {
  100%, 0%{
    stroke: $red;
  }
  40%{
    stroke: $blue;
  }
  66%{
    stroke: $green;
  }
  80%, 90%{
    stroke: $yellow;
  }
}

